--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ modern/picture_classification/a
 modern/picture_classification/Data.zip
 /modern/picture_classification/data
 /modern/picture_classification/work
+crawler/jwapp/a.csv
